# desi-dialect-map

./: .gitignore  API_INTEGRATION.md  API_INTEGRATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SIMPLE.md  LICENSE  PRIVACY_GUIDE.md  README.md  REPORT.md  TEAM_ACHIEVEMENTS.md  TEAM_COLLABORATION.md  api_auth.py  api_auth_ui.py  api_categories.py  api_client.py  api_config.py  api_records.py  app.py  app_with_api.py  auth_ui.py  create_test_image.py  database.py  pyproject.toml  requirements.txt  test_api_integration.py  test_local_storage.py
.gitlab/issue_templates/: Bug.md  Documentation.md  Feature.md
.gitlab/merge_request_templates/: Default.md
api/v1/records/: conversion.py
